Restore compatibility with Java 8
Issue: #4973